--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLAY\n",
+      "FILLING\n",
+      "BAR\n",
+      "THEATRE\n",
+      "EASYGOING\n",
+      "DATE\n",
+      "LEAD\n",
+      "THAT\n",
+      "STORY\n",
+      "ISLAND\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "for word in words:\n",
+    "    print(word.upper())"
    ]
   },
   {
@@ -41,11 +60,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filling\n",
+      "theatre\n",
+      "easygoing\n",
+      "story\n",
+      "island\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "l = []\n",
+    "for w in words:\n",
+    "    if len(w) >= 5:\n",
+    "        print(w)"
    ]
   },
   {
@@ -57,11 +92,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theatre\n",
+      "that\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "for i in words:\n",
+    "    if i[0] == 't':\n",
+    "        print(i)"
    ]
   },
   {
@@ -80,11 +127,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "for i in range (1,11):\n",
+    "    print(i**2)"
    ]
   },
   {
@@ -96,11 +162,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "9\n",
+      "25\n",
+      "49\n",
+      "81\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "for i in range(1,11,2):\n",
+    "    print(i**2)"
    ]
   },
   {
@@ -112,11 +192,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[64,\n",
+       " 256,\n",
+       " 576,\n",
+       " 1024,\n",
+       " 1600,\n",
+       " 2304,\n",
+       " 3136,\n",
+       " 4096,\n",
+       " 5184,\n",
+       " 6400,\n",
+       " 7744,\n",
+       " 9216,\n",
+       " 10816,\n",
+       " 12544,\n",
+       " 14400,\n",
+       " 16384,\n",
+       " 18496,\n",
+       " 20736,\n",
+       " 23104,\n",
+       " 25600,\n",
+       " 28224,\n",
+       " 30976,\n",
+       " 33856,\n",
+       " 36864,\n",
+       " 40000,\n",
+       " 43264,\n",
+       " 46656,\n",
+       " 50176,\n",
+       " 53824,\n",
+       " 57600,\n",
+       " 61504,\n",
+       " 65536,\n",
+       " 69696,\n",
+       " 73984,\n",
+       " 78400,\n",
+       " 82944,\n",
+       " 87616,\n",
+       " 92416,\n",
+       " 97344,\n",
+       " 102400,\n",
+       " 107584,\n",
+       " 112896,\n",
+       " 118336,\n",
+       " 123904,\n",
+       " 129600,\n",
+       " 135424,\n",
+       " 141376,\n",
+       " 147456,\n",
+       " 153664,\n",
+       " 160000,\n",
+       " 166464,\n",
+       " 173056,\n",
+       " 179776,\n",
+       " 186624,\n",
+       " 193600,\n",
+       " 200704,\n",
+       " 207936,\n",
+       " 215296,\n",
+       " 222784,\n",
+       " 230400,\n",
+       " 238144,\n",
+       " 246016,\n",
+       " 254016,\n",
+       " 262144,\n",
+       " 270400,\n",
+       " 278784,\n",
+       " 287296,\n",
+       " 295936,\n",
+       " 304704,\n",
+       " 313600,\n",
+       " 322624,\n",
+       " 331776,\n",
+       " 341056,\n",
+       " 350464,\n",
+       " 360000,\n",
+       " 369664,\n",
+       " 379456,\n",
+       " 389376,\n",
+       " 399424,\n",
+       " 409600,\n",
+       " 419904,\n",
+       " 430336,\n",
+       " 440896,\n",
+       " 451584,\n",
+       " 462400,\n",
+       " 473344,\n",
+       " 484416,\n",
+       " 495616,\n",
+       " 506944,\n",
+       " 518400,\n",
+       " 529984,\n",
+       " 541696,\n",
+       " 553536,\n",
+       " 565504,\n",
+       " 577600,\n",
+       " 589824,\n",
+       " 602176,\n",
+       " 614656,\n",
+       " 627264,\n",
+       " 640000,\n",
+       " 652864,\n",
+       " 665856,\n",
+       " 678976,\n",
+       " 692224,\n",
+       " 705600,\n",
+       " 719104,\n",
+       " 732736,\n",
+       " 746496,\n",
+       " 760384,\n",
+       " 774400,\n",
+       " 788544,\n",
+       " 802816,\n",
+       " 817216,\n",
+       " 831744,\n",
+       " 846400,\n",
+       " 861184,\n",
+       " 876096,\n",
+       " 891136,\n",
+       " 906304,\n",
+       " 921600,\n",
+       " 937024,\n",
+       " 952576,\n",
+       " 968256,\n",
+       " 984064]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "sq =[]\n",
+    "for i in  range(1,1000):\n",
+    "    if i % 8 ==0:\n",
+    "        sq.append(i**2)\n",
+    "sq\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64, 256, 576, 1024, 1600, 2304, 3136, 4096, 5184, 6400, 7744, 9216, 10816, 12544, 14400, 16384, 18496, 20736, 23104, 25600, 28224, 30976, 33856, 36864, 40000, 43264, 46656, 50176, 53824, 57600, 61504, 65536, 69696, 73984, 78400, 82944, 87616, 92416, 97344, 102400, 107584, 112896, 118336, 123904, 129600, 135424, 141376, 147456, 153664, 160000, 166464, 173056, 179776, 186624, 193600, 200704, 207936, 215296, 222784, 230400, 238144, 246016, 254016, 262144, 270400, 278784, 287296, 295936, 304704, 313600, 322624, 331776, 341056, 350464, 360000, 369664, 379456, 389376, 399424, 409600, 419904, 430336, 440896, 451584, 462400, 473344, 484416, 495616, 506944, 518400, 529984, 541696, 553536, 565504, 577600, 589824, 602176, 614656, 627264, 640000, 652864, 665856, 678976, 692224, 705600, 719104, 732736, 746496, 760384, 774400, 788544, 802816, 817216, 831744, 846400, 861184, 876096, 891136, 906304, 921600, 937024, 952576, 968256, 984064]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# differnt way to do it\n",
+    "squares_of_multiples_of_8 = [x**2 for x in range(8, 1000, 8)]\n",
+    "print(squares_of_multiples_of_8)"
    ]
   },
   {
@@ -128,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,11 +409,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(len(people))"
    ]
   },
   {
@@ -186,11 +434,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "count =0 \n",
+    "for person in people:\n",
+    "    if person['n_kids'] > 0:\n",
+    "        count +=1\n",
+    "    \n",
+    "count\n",
+    "     "
    ]
   },
   {
@@ -202,11 +468,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "total = 0\n",
+    "for person in people:\n",
+    "        total +=person['n_kids']\n",
+    "    \n",
+    "total"
    ]
   },
   {
@@ -218,12 +500,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Juan', 'age': 34, 'n_kids': 2}, {'name': 'Pepe', 'age': 27, 'n_kids': 0}, {'name': 'Sonia', 'age': 41, 'n_kids': 2}, {'name': 'Lucía', 'age': 22, 'n_kids': 3}, {'name': 'Leo', 'age': 55, 'n_kids': 5}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "people_next_year = []\n",
+    "\n",
+    "for person in people:\n",
+    "    if person['name'].endswith('a'):\n",
+    "        new_children_count = person[\"n_kids\"] + 1\n",
+    "    else:\n",
+    "      \n",
+    "        new_children_count = person[\"n_kids\"]\n",
+    "\n",
+    "  \n",
+    "    new_info = {\n",
+    "        \"name\": person[\"name\"],\n",
+    "        \"age\" : person[\"age\"],\n",
+    "        \"n_kids\": new_children_count\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    people_next_year.append(new_info)\n",
+    "\n",
+    "\n",
+    "print(people_next_year)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -242,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
